# protobot

./: CMakeLists.txt  README.md  package.xml
STL/: GripperHolder.stl  base_link.stl  link_01.stl  link_02.stl  link_03.stl
config/: joint1_position_controller.yaml  joint2_position_controller.yaml  joint3_position_controller.yaml  joint4_position_controller.yaml  joint5_position_controller.yaml  joint_state_controller.yaml  joints.yaml
launch/: config.rviz  gazebo.launch  rviz.launch  simulation.launch  spawn.launch
meshes/: base_link.stl  link_03.stl  link_05.stl
protobot_control/: CMakeLists.txt  package.xml
protobot_control/config/: joint_trajectory_controller.yaml  protobot_control.yaml
protobot_control/launch/: protobot_control.launch  protobot_joint_trajectory_controller.launch
protobot_description/: CMakeLists.txt  README.md  package.xml
protobot_description/launch/: config.rviz  gazebo.launch  rviz.launch
protobot_description/meshes/: link_01.stl  link_02.stl  link_04.stl
protobot_description/urdf/: model.urdf  protobot.gazebo  protobot.xacro  protobot_calculated_intertia.xacro
protobot_gazebo/: CMakeLists.txt  package.xml
protobot_gazebo/launch/: gazebo.launch
protobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
protobot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  protobot.srdf  ros_controllers.yaml
protobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  protobot.launch  protobot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
urdf/: protobot.xacro  protobot_calculated_intertia.xacro  template.xacro
