<?xml version="1.0"?>
<package>
  <name>protobot_control</name>
  <version>0.0.0</version>
  <description>The protobot_control package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mayavan95@gmail.com">mayavan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>

  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
