<package>
  <name>protobot_gazebo</name>
  <version>1.1.0</version>
  <description>Unified Robot Description Format for protobot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mayavan95@gmail.com">mayavan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>